force-app/main/default/objects/CTRRequestFormItemApproval__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalType__c</fullName>
        <label>Approval Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Counter Party</fullName>
                </value>
                <value>
                    <fullName>SAP Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApproverUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CTRRequestFormItemApproval1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTRRequestFormItem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CTR Request Form Item</label>
        <referenceTo>CTRRequestFormItem__c</referenceTo>
        <relationshipLabel>Approva Request Form Item</relationshipLabel>
        <relationshipName>ApprovalRequestFormItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreviousApprovalStep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Approval Step</label>
        <referenceTo>CTRRequestFormItemApproval__c</referenceTo>
        <relationshipLabel>CTRRequestFormItemApproval</relationshipLabel>
        <relationshipName>CTRRequestFormItemApproval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmittedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CTRRequestFormItemApproval</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CTRRequestFormItemApproval</label>
    <nameField>
        <label>CTRRequestFormItemApproval Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>